# js-polars

./: Cargo.toml  package-lock.json
.cargo/: config.toml
polars/: io.ts  worker.ts
src/: dataframe.rs  datatypes.rs  io.rs  lib.rs  series.rs
src/conversion/: extern_struct.rs  mod.rs
src/lazy/: dataframe.rs  lazy_functions.rs
src/lazy/expr/: mod.rs  string.rs
