[package]
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
homepage = "https://github.com/pola-rs/polars"
license = "MIT"
name = "browser"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 64
lto = true
opt-level = 's'

[features]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
paste = "1.0.6"
rayon = "1.8"
serde-wasm-bindgen = "0.4"
thiserror = "1.0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.2" }

[dependencies.polars]
version = "0.43"
default-features = false
features = [
    "csv",
    "lazy",
    "csv",
    "dtype-datetime",
    "dtype-categorical",
    "dtype-u8",
    "dtype-u16",
    "strings",
    "regex",
    "string_pad",
    "abs",
    "dtype-struct",
    "round_series",
]

[dependencies.web-sys]
features = ['console']
version = "0.3"

[workspace]
